<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activitiesFormularios.InformacionFuncionalidadActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/txtFuncionalidadAplicacion1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ayudaAplicacionBloqueUno"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:textSize="20dp"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/txtAyudaFuncionalidad2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/ayudaAplicacionBloqueUnoBis"
                    android:textStyle="bold"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:layout_marginTop="20dp"/>


            <LinearLayout
                    android:id="@+id/txtAyudaFuncionalidad3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                <android.support.v7.widget.CardView
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:card_view="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/cardViewContenedor"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_margin="10dp"
                        android:elevation="10dp"
                        card_view:cardCornerRadius="2dp"
                        card_view:cardElevation="@dimen/activity_horizontal_margin">

                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                        <ImageView
                                android:id="@+id/imageManzanaCarview"
                                android:layout_width="match_parent"
                                android:layout_height="80dp"
                                android:src="@drawable/cebolla_huevo_roja"/>

                        <TextView
                                android:id="@+id/txtViewDescripcionCarview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/modelocarview_interfaz_principal_descripcion"
                                android:gravity="center"
                                android:textSize="26dp"
                                android:textStyle="bold"/>
                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>

            <TextView
                    android:id="@+id/txtAyudaFuncionalidad4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:textSize="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/ayudaAplicacionBloqueDos"
                    android:textStyle="bold"/>


            <TextView
                    android:id="@+id/txtAyudaFuncionalidad5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:textSize="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/ayudaAplicacionBloqueDosBis"
                    android:textStyle="bold"/>
        </LinearLayout>

    </ScrollView>


</LinearLayout>